--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,22 +1,26 @@
 nav {
-    height: 120px;
-    width: 100%;
-    background-color: #4056A1;
-    color: #FFFFFF;
-    padding: 0 1.5em;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  nav span {
-    font-family: 'Bungee', sans-serif;
-  }
-  
-  .new-tweet {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Source Sans 3', sans-serif;
-  }
+  height: 120px;
+  width: 100%;
+  background-color: #4056A1;
+  color: #FFFFFF;
+  padding: 0 1.5em;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; /* Ensure the nav-bar is on top of other content */
+}
+
+nav span {
+  font-family: 'Bungee', sans-serif;
+}
+
+.new-tweet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Source Sans 3', sans-serif;
+}
