--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,7 +16,7 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-color: #FFFFFF  ;
   font-size: 24px;
   font-family: 'Source Sans 3', sans-serif;
   padding-top: 120px; /* Add padding equal to the height of the nav-bar */
